Fix more Java 8 incompatibilities in unit tests (List.of, Map.of, Optional.isEmpty, Files.writeString, readAllBytes)
Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>