@@ -12,6 +12,7 @@ import com.databricks.sdk.core.error.details.ErrorDetails;
 import com.databricks.sdk.core.error.platform.NotFound;
 import java.io.File;
 import java.io.FileInputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
@@ -294,7 +295,7 @@ class DBFSVolumeClientTest {
           .thenReturn(processorBuilder);
 
       File file = new File(tempFolder, "dbfs_test_put.txt");
-      Files.writeString(file.toPath(), "test-put-stream");
+      Files.write(file.toPath(), "test-put-stream".getBytes(StandardCharsets.UTF_8));
       System.out.println("File created");
 
       boolean result;
